--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,14 @@
 body {
     background-color: grey;
 }
+
+.centered-notification{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  font-size: 20px; 
+  padding: 16px; 
+  width: 1000px; 
+} 
