--- a/src/app.css
+++ b/src/app.css
@@ -2,13 +2,14 @@ body {
     background-color: grey;
 }
 
-.centered-notification{
-  display: flex;
+.centered-notification {
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   height: 100vh;
   width: 100vw;
-  font-size: 20px; 
-  padding: 16px; 
-  width: 1000px; 
-} 
+  font-size: 20px;
+  padding: 16px;
+  width: 500px;
+  color: red; 
+}
